src/a12/a12.h

struct a12_state;
struct a12_dynreq {
	char host[46];
	char pubk[32];
	uint16_t port;
	char authk[12];
	int proto;
};
enum server_appl {
	SERVER_APPL_NONE = 0,
	SERVER_APPL_TEMP = 1,
	SERVER_APPL_PRIMARY = 2
};
struct appl_meta;
struct appl_meta {
	FILE* handle;
	char* buf;
	uint64_t buf_sz;
	uint8_t server_appl;
	void* server_tag;
	struct appl_meta* next;
	uint16_t identifier;
	uint16_t categories;
	uint16_t permissions;
	uint8_t hash[4];
	struct {
		char name[18];
		char short_descr[69];
	} appl;
	uint64_t update_ts;
};
void a12_unpack(
	struct a12_state*, const uint8_t*, size_t, void* tag, void (*on_event)
		(struct arcan_shmif_cont* cont, int chid, struct arcan_event*, void*));
void
a12_channel_new(struct a12_state* S,
	uint8_t chid, uint8_t segkind, uint32_t cookie);
void
a12_channel_shutdown(struct a12_state* S, const char* last_words);
void
a12_channel_close(struct a12_state*);
void a12_stream_cancel(struct a12_state* S, uint8_t chid);
bool a12_ok(struct a12_state* S);
int a12_remote_mode(struct a12_state* S);
void a12_vstream_cancel(struct a12_state* S, uint8_t chid, int reason);
int a12_btransfer_outfd(struct a12_state* S);
void a12_shutdown_id(struct a12_state* S, uint32_t id);
struct a12_iostat {
	size_t b_in;
	size_t b_out;
	size_t vframe_backpressure; 
	size_t roundtrip_latency;
	size_t ms_vframe;           
	float ms_vframe_px;
	size_t packets_pending;     
};
const char* a12_get_endpoint(struct a12_state* S);
void a12_set_endpoint(struct a12_state* S, const char*);
struct a12_iostat a12_state_iostat(struct a12_state* S);
bool a12_request_dynamic_resource(
	struct a12_state* S,
	uint8_t ident_pubk[static 32],
	bool prefer_tunnel,
	void(*request_reply)(struct a12_state*, struct a12_dynreq, void* tag),
	void* tag);
void a12_supply_dynamic_resource(struct a12_state* S, struct a12_dynreq);
const char* a12_error_state(struct a12_state* S);
extern int a12_trace_targets;
extern FILE* a12_trace_dst;
void a12_trace_tag(struct a12_state* S, const char* tag);
const char* a12int_group_tostr(int group);