src/a12/a12_int.h

size_t a12int_header_size(int type);
struct blob_out;
struct blob_out {
	uint8_t checksum[16];
	int fd;
	uint8_t chid;
	int type;
	uint32_t identifier;
	char extid[16];
	size_t left;
	char* buf;
	size_t buf_sz;
	bool streaming;
	bool active;
	uint64_t streamid;
	uint64_t rampup_seqnr;
	struct ZSTD_CCtx_s* zstd;
	struct blob_out* next;
};
struct a12_channel {
	int active;
	struct arcan_shmif_cont* cont;
	struct a12_unpack_cfg raw;
	struct {
		struct video_frame vframe;
		struct audio_frame aframe;
		struct binary_frame bframe;
	} unpack_state;
	struct shmifsrv_vbuffer acc;
	struct {
		uint8_t* compression;
		struct ZSTD_CCtx_s* zstd;
#if defined(WANT_H264_ENC) || defined(WANT_H264_DEC)
		struct {
			AVCodecParserContext* parser;
			AVCodecContext* encdec;
			const AVCodec* codec;
			AVFrame* frame;
			AVPacket* packet;
			struct SwsContext* scaler;
			size_t w, h;
			bool failed;
		} videnc;
#endif
	};
};
struct a12_state;
struct a12_state {
	struct a12_context_options* opts;
	struct appl_meta* directory;
	uint64_t directory_clk;
	bool notify_dynamic;
	uint8_t last_mac_in[MAC_BLOCK_SZ];
	uint64_t current_seqnr;
	uint64_t last_seen_seqnr;
	uint64_t out_stream;
	bool advenc_broken;
	struct {
		uint32_t frame_window[VIDEO_FRAME_DRIFT_WINDOW]; 
		size_t pending; 
	} congestion_stats;
	struct a12_iostat stats;
	size_t buf_sz[2];
	uint8_t* bufs[2];
	uint8_t buf_ind;
	size_t buf_ofs;
	struct blob_out* pending;
	size_t active_blobs;
	struct a12_bhandler_res
		(*binary_handler)(struct a12_state*, struct a12_bhandler_meta, void*);
	void* binary_handler_tag;
	struct a12_channel channels[256];
	int in_channel;
	uint32_t in_stream;
	int out_channel;
	void (*on_auth)(struct a12_state*, void*);
	void* auth_tag;
	uint8_t decode[65536];
	uint16_t decode_pos;
	uint16_t left;
	uint8_t state;
	volatile uint32_t cookie;
	struct {
		uint8_t ephem_priv[32];
		uint8_t real_priv[32];
		uint64_t rekey_pos;
		uint8_t remote_pub[32];
	} keys;
	bool server;
	bool cl_firstout;
	int authentic;
	int remote_mode;
	bool auth_latched;
	size_t prepend_unpack_sz;
	uint8_t* prepend_unpack;
	blake3_hasher out_mac, in_mac;
	struct chacha_ctx* enc_state;
	struct chacha_ctx* dec_state;
};
void a12int_stream_fail(struct a12_state* S, uint8_t ch, uint32_t id, int fail);
void a12int_stream_ack(struct a12_state* S, uint8_t ch, uint32_t id);
void a12int_append_out(
	struct a12_state* S, uint8_t type, uint8_t* out, size_t out_sz,
	uint8_t* prepend, size_t prepend_sz);
void a12int_step_vstream(struct a12_state* S, uint32_t id);
void a12int_set_directory(struct a12_state*, struct appl_meta*);
void
	a12int_notify_dynamic_resource(
		struct a12_state*,
		const char* petname,
		uint8_t kpub[static 32],
		uint8_t role, bool added);
struct appl_meta* a12int_get_directory(struct a12_state*, uint64_t* clk);
void a12int_request_dirlist(struct a12_state*, bool notify);