src/shmif/arcan_shmif_server.h


struct shmifsrv_client;
struct shmifsrv_envp {
	const char* path;
	const char** argv;
	const char** envv;
	size_t init_w;
	size_t init_h;
};
struct shmifsrv_client*
	shmifsrv_send_subsegment(struct shmifsrv_client* dst, int segid,
	size_t init_w, size_t init_h, int reqid);
struct shmifsrv_client*
	shmifsrv_allocate_connpoint(const char* name, const char* key,
	mode_t permission, int* fd, int* statuscode);
struct shmifsrv_client* shmifsrv_spawn_client(
	struct shmifsrv_envp env, int* clsocket, int* statuscode);
int shmifsrv_client_handle(struct shmifsrv_client*);
void shmifsrv_tick(struct shmifsrv_client*);
int shmifsrv_poll(struct shmifsrv_client*);
void shmifsrv_free(struct shmifsrv_client*);
bool shmifsrv_enqueue_event(
	struct shmifsrv_client*, struct arcan_event*, int fd);
size_t shmifsrv_dequeue_events(
	struct shmifsrv_client*, struct arcan_event* newev, size_t limit);
bool shmifsrv_process_event(
	struct shmifsrv_client*, struct arcan_event* ev);
struct shmifsrv_vbuffer {
	int state;
	shmif_pixel* buffer;
	struct {
		bool origo_ll : 1;
		bool ignore_alpha : 1;
		bool subregion : 1;
		bool srgb : 1;
		bool hwhandles : 1;
	} flags;
	size_t w, h, pitch, stride;
	uint64_t vpts;
	struct arcan_shmif_region region;
	size_t formats[4];
	int planes[4];
};
struct shmifsrv_abuffer {
	int state;
	shmif_asample* buffer;
	size_t bytes;
	size_t limit;
	size_t samples;
	size_t samplerate;
	uint8_t channels;
};
struct shmifsrv_vbuffer shmifsrv_video(struct shmifsrv_client*, bool step);
struct shmifsrv_abuffer shmifsrv_audio(
	struct shmifsrv_client*, shmif_asample* dst, size_t dst_sz);
int shmifsrv_monotonic_tick(int* left);
void shmifsrv_monotonic_rebase();