src/a12/a12_types.zig


pub extern fn a12_channel_new(
    S: ?*a12_state,
    chid: u8,
    segkind: u8,
    cookie: u32,
) void;
pub extern fn a12_channel_shutdown(S: ?*a12_state, last_words: [*:0]const u8) void;
pub extern fn a12_channel_close(S: ?*a12_state) void;

pub extern fn a12_stream_cancel(S: ?*a12_state, chid: u8) void;
pub extern fn a12_vstream_cancel(S: ?*a12_state, chid: u8, reason: c_int) void;

pub extern fn a12_ok(S: ?*a12_state) bool;
pub extern fn a12_remote_mode(S: ?*a12_state) c_int;
pub extern fn a12_btransfer_outfd(S: ?*a12_state) c_int;

pub extern fn a12_shutdown_id(S: ?*a12_state, id: u32) void;
pub extern fn a12_state_iostat(S: ?*a12_state) a12_iostat;

pub extern fn a12_get_endpoint(S: ?*a12_state) [*c]const u8;
pub extern fn a12_set_endpoint(S: ?*a12_state, endpoint: [*c]const u8) void;

pub const DynreqReplyFn = *const fn (
    S: ?*a12_state,
    req: a12_dynreq,
    tag: ?*anyopaque,
) callconv(.c) void;
pub extern fn a12_request_dynamic_resource(
    S: ?*a12_state,
    ident_pubk: [*]const u8,
    prefer_tunnel: bool,
    request_reply: ?DynreqReplyFn,
    tag: ?*anyopaque,
) bool;
pub extern fn a12_supply_dynamic_resource(S: ?*a12_state, req: a12_dynreq) void;

pub extern fn a12_error_state(S: ?*a12_state) [*c]const u8;

pub extern var a12_trace_targets: c_int;
pub extern var a12_trace_dst: ?*anyopaque; // FILE*
pub extern fn a12_trace_tag(S: ?*a12_state, tag: [*:0]const u8) void;
pub extern fn a12int_group_tostr(group: c_int) [*c]const u8;

pub extern fn a12int_stream_fail(S: ?*a12_state, ch: u8, id: u32, fail: c_int) void;
pub extern fn a12int_stream_ack(S: ?*a12_state, ch: u8, id: u32) void;
pub extern fn a12int_append_out(
    S: ?*a12_state,
    @"type": u8,
    out: [*]const u8,
    out_sz: usize,
    prepend: [*c]u8,
    prepend_sz: usize,
) void;
pub extern fn a12int_step_vstream(S: ?*a12_state, id: u32) void;
pub extern fn a12int_set_directory(S: ?*a12_state, meta: ?*appl_meta) void;
pub extern fn a12int_notify_dynamic_resource(
    S: ?*a12_state,
    petname: [*:0]const u8,
    kpub: [*]const u8,
    role: u8,
    state: u8,
    ns: u16,
) void;
pub extern fn a12int_get_directory(S: ?*a12_state, clk: *u64) ?*appl_meta;
pub extern fn a12int_request_dirlist(S: ?*a12_state, notify: bool) void;
pub extern fn a12int_header_size(@"type": c_int) usize;

pub extern fn arcan_timemillis() c_ulonglong;
pub extern fn arcan_random(dst: [*]u8, ntc: usize) void;

// ══════════════════════════════════════════════════════════════════════════════
// Section 23: arcan_shmif / shmifsrv entry points consumed by helper_cl/srv
// ══════════════════════════════════════════════════════════════════════════════

pub extern fn arcan_shmif_acquire(
    parent: ?*arcan_shmif_cont,
    shmkey: [*c]const u8,
    typ: c_int,
    flags: c_int,
    ...,
) arcan_shmif_cont;
pub extern fn arcan_shmif_open(
    type_: c_int,
    flags: c_uint,
    args: ?*anyopaque, // actually `struct arg_arr**`; opaque to keep a12_types standalone
) arcan_shmif_cont;
pub extern fn arcan_shmif_drop(cont: ?*arcan_shmif_cont) void;
pub extern fn arcan_shmif_poll(cont: ?*arcan_shmif_cont, ev: ?*arcan_event) c_int;
pub extern fn arcan_shmif_enqueue(cont: ?*arcan_shmif_cont, ev: ?*const arcan_event) c_int;
pub extern fn arcan_shmif_descrevent(ev: ?*const arcan_event) bool;
pub extern fn arcan_shmif_eventpack(ev: ?*const arcan_event, buf: [*]u8, buf_sz: usize) isize;
pub extern fn arcan_shmif_eventunpack(buf: [*]const u8, buf_sz: usize, ev: ?*arcan_event) isize;
pub extern fn arcan_shmif_eventstr(ev: ?*const arcan_event, dbuf: [*c]u8, dsz: usize) [*c]u8;
pub extern fn arcan_shmif_signal(cont: ?*arcan_shmif_cont, mask: c_int) c_uint;
pub extern fn arcan_shmif_resize(cont: ?*arcan_shmif_cont, w: c_uint, h: c_uint) bool;
pub extern fn arcan_shmif_resize_ext(
    cont: ?*arcan_shmif_cont,
    w: c_uint,
    h: c_uint,
    ext: shmif_resize_ext,
) bool;

pub extern fn shmifsrv_audio(
    c: ?*shmifsrv_client,
    cb: ?*const fn (?*shmifsrv_client, ?[*]shmif_asample, usize, c_uint, ?*anyopaque) callconv(.c) void,
    tag: ?*anyopaque,
) void;
pub extern fn shmifsrv_client_handle(c: ?*shmifsrv_client, pid: ?*c_int) c_int;
pub extern fn shmifsrv_client_protomask(c: ?*shmifsrv_client, mask: c_uint) c_uint;
pub extern fn shmifsrv_client_type(c: ?*shmifsrv_client) c_int;
pub extern fn shmifsrv_dequeue_events(c: ?*shmifsrv_client, ev: [*]arcan_event, max: c_uint) c_uint;
pub extern fn shmifsrv_enqueue_event(c: ?*shmifsrv_client, ev: ?*const arcan_event, fd: c_int) bool;
pub extern fn shmifsrv_free(c: ?*shmifsrv_client, flags: c_int) void;
pub extern fn shmifsrv_monotonic_tick(left: ?*c_int) c_uint;
pub extern fn shmifsrv_poll(c: ?*shmifsrv_client) c_int;
pub extern fn shmifsrv_process_event(c: ?*shmifsrv_client, ev: ?*const arcan_event) bool;
pub extern fn shmifsrv_send_subsegment(
    c: ?*shmifsrv_client,
    kind: c_int,
    hints: c_int,
    w: usize,
    h: usize,
    reqid: c_int,
    cookie: u32,
) ?*shmifsrv_client;
pub extern fn shmifsrv_tick(c: ?*shmifsrv_client) void;
pub extern fn shmifsrv_video(c: ?*shmifsrv_client) shmifsrv_vbuffer;
pub extern fn shmifsrv_video_step(c: ?*shmifsrv_client) void;
pub extern fn shmifsrv_last_words(c: ?*shmifsrv_client, outbuf: [*c]u8, outbuf_sz: usize) void;
pub extern fn shmifsrv_monotonic_rebase() void;
pub extern fn shmifsrv_enqueue_multipart_message(
    c: ?*shmifsrv_client,
    base: ?*const arcan_event,
    msg: [*c]const u8,
    len_in: usize,
) bool;

/// arcan_shmif_server.h — shmifsrv_allocate_connpoint: allocate a named
/// connection point (/tmp/arcan or $XDG_RUNTIME_DIR/arcan backed) and
/// return the opaque server client. `key` = connpoint name, `auth` optional.
pub extern fn shmifsrv_allocate_connpoint(
    name: [*c]const u8,
    key: ?[*:0]const u8,
    permission: c_uint,
    fd: c_int,
) ?*shmifsrv_client;

/// shmifsrv_inherit_connection: adopt an already-connected socket fd and
/// wrap it as a shmifsrv_client. `statuscode` receives a negative error on
/// failure, 0 on success.
pub extern fn shmifsrv_inherit_connection(
    fd: c_int,
    memfd: c_int,
    statuscode: ?*c_int,
) ?*shmifsrv_client;

/// shmifsrv_spawn_client: fork+exec a new shmif client per `env`, returning
/// the server-side opaque client. `clsocket` is populated with the client's
/// socket fd for the parent side.
pub extern fn shmifsrv_spawn_client(
    env: shmif.struct_shmifsrv_envp,
    clsocket: *c_int,
    statuscode: ?*c_int,
    idtok: u32,
) ?*shmifsrv_client;

// ══════════════════════════════════════════════════════════════════════════════
// Section 24: shmif constants referenced by a12 consumers
// ══════════════════════════════════════════════════════════════════════════════

// Event categories (shmif_event.h)
pub const EVENT_SYSTEM: c_int = 1;
pub const EVENT_IO: c_int = 2;
pub const EVENT_VIDEO: c_int = 4;
pub const EVENT_AUDIO: c_int = 8;
pub const EVENT_TARGET: c_int = 16;
pub const EVENT_FSRV: c_int = 32;
pub const EVENT_EXTERNAL: c_int = 64;
pub const EVENT_NET: c_int = 128;

// External event kinds (arcan_shmif_event.h::ARCAN_EVENT_EXT_*)
pub const EVENT_EXTERNAL_MESSAGE: c_int = 0;
pub const EVENT_EXTERNAL_COREOPT: c_int = 1;
pub const EVENT_EXTERNAL_IDENT: c_int = 2;
pub const EVENT_EXTERNAL_FAILURE: c_int = 3;
pub const EVENT_EXTERNAL_BUFFERSTREAM: c_int = 4;
pub const EVENT_EXTERNAL_FRAMESTATUS: c_int = 5;
pub const EVENT_EXTERNAL_STREAMINFO: c_int = 6;
pub const EVENT_EXTERNAL_STATESIZE: c_int = 7;
pub const EVENT_EXTERNAL_FLUSHAUD: c_int = 8;
pub const EVENT_EXTERNAL_SEGREQ: c_int = 9;
pub const EVENT_EXTERNAL_KEYINPUT: c_int = 10;
pub const EVENT_EXTERNAL_CURSORINPUT: c_int = 11;
pub const EVENT_EXTERNAL_CURSORHINT: c_int = 12;
pub const EVENT_EXTERNAL_VIEWPORT: c_int = 13;
pub const EVENT_EXTERNAL_CONTENT: c_int = 14;
pub const EVENT_EXTERNAL_LABELHINT: c_int = 15;
pub const EVENT_EXTERNAL_REGISTER: c_int = 16;
pub const EVENT_EXTERNAL_ALERT: c_int = 17;
pub const EVENT_EXTERNAL_CLOCKREQ: c_int = 18;
pub const EVENT_EXTERNAL_BCHUNKSTATE: c_int = 19;
pub const EVENT_EXTERNAL_STREAMSTATUS: c_int = 20;
pub const EVENT_EXTERNAL_PRIVDROP: c_int = 21;
pub const EVENT_EXTERNAL_INPUTMASK: c_int = 22;
pub const EVENT_EXTERNAL_NETSTATE: c_int = 23;
pub const EVENT_EXTERNAL_MESSAGE_MULTIPART: c_int = 24;

// Target command codes (arcan_shmif_event.h::TARGET_COMMAND_*)
pub const TARGET_COMMAND_UNDEFINED: c_int = 0;
pub const TARGET_COMMAND_EXIT: c_int = 1;
pub const TARGET_COMMAND_FRAMESKIP: c_int = 2;
pub const TARGET_COMMAND_STEPFRAME: c_int = 3;
pub const TARGET_COMMAND_COREOPT: c_int = 4;
pub const TARGET_COMMAND_STORE: c_int = 5;
pub const TARGET_COMMAND_RESTORE: c_int = 6;
pub const TARGET_COMMAND_BCHUNK_IN: c_int = 7;
pub const TARGET_COMMAND_BCHUNK_OUT: c_int = 8;
pub const TARGET_COMMAND_RESET: c_int = 9;
pub const TARGET_COMMAND_PAUSE: c_int = 10;
pub const TARGET_COMMAND_UNPAUSE: c_int = 11;
pub const TARGET_COMMAND_SEEKTIME: c_int = 12;
pub const TARGET_COMMAND_SEEKCONTENT: c_int = 13;
pub const TARGET_COMMAND_DISPLAYHINT: c_int = 14;
pub const TARGET_COMMAND_SETIODEV: c_int = 15;
pub const TARGET_COMMAND_STREAMSET: c_int = 16;
pub const TARGET_COMMAND_ATTENUATE: c_int = 17;
pub const TARGET_COMMAND_AUDDELAY: c_int = 18;
pub const TARGET_COMMAND_NEWSEGMENT: c_int = 19;
pub const TARGET_COMMAND_REQFAIL: c_int = 20;
pub const TARGET_COMMAND_BUFFER_FAIL: c_int = 21;
pub const TARGET_COMMAND_DEVICE_NODE: c_int = 22;
pub const TARGET_COMMAND_GRAPHMODE: c_int = 23;
pub const TARGET_COMMAND_MESSAGE: c_int = 24;
pub const TARGET_COMMAND_FONTHINT: c_int = 25;
pub const TARGET_COMMAND_GEOHINT: c_int = 26;
pub const TARGET_COMMAND_OUTPUTHINT: c_int = 27;
pub const TARGET_COMMAND_ACTIVATE: c_int = 28;
pub const TARGET_COMMAND_ANCHORHINT: c_int = 29;

// shmif signal bits (arcan_shmif_control.h)
pub const SHMIF_SIGVID: c_int = 1;
pub const SHMIF_SIGAUD: c_int = 2;
pub const SHMIF_SIGBLK_ONCE: c_int = 0;
pub const SHMIF_SIGBLK_NONE: c_int = 4;
pub const SHMIF_SIGBLK_FORCE: c_int = 8;

// shmif render hints
pub const SHMIF_RHINT_ORIGO_LL: u8 = 1;
pub const SHMIF_RHINT_SUBREGION: u8 = 2;
pub const SHMIF_RHINT_IGNORE_ALPHA: u8 = 4;
pub const SHMIF_RHINT_CSPACE_SRGB: u8 = 8;
pub const SHMIF_RHINT_AUTH_TOK: u8 = 16;
pub const SHMIF_RHINT_VSIGNAL_EV: u8 = 32;
pub const SHMIF_RHINT_TPACK: u8 = 64;

// shmif_meta bits
pub const SHMIF_META_NONE: c_uint = 0;
pub const SHMIF_META_HDR: c_uint = 1;
pub const SHMIF_META_VOBJ: c_uint = 2;
pub const SHMIF_META_VR: c_uint = 4;
pub const SHMIF_META_HDRF16: c_uint = 8;
pub const SHMIF_META_LDEF: c_uint = 16;
pub const SHMIF_META_VENC: c_uint = 32;
pub const SHMIF_META_A11Y: c_uint = 64;

// shmif open flags (arcan_shmif_control.h)
pub const SHMIF_NOACTIVATE: c_uint = 8;

// shmifsrv free flags
pub const SHMIFSRV_FREE_NO_DMS: c_int = 1;
pub const SHMIFSRV_FREE_LOCAL: c_int = 2;

// Segment IDs (arcan_shmif_event.h::ARCAN_SEGID_*)
pub const SEGID_UNKNOWN: c_int = 0;
pub const SEGID_LWA: c_int = 1;
pub const SEGID_MEDIA: c_int = 2;
pub const SEGID_NETWORK_SERVER: c_int = 3;
pub const SEGID_NETWORK_CLIENT: c_int = 4;
pub const SEGID_SHELL: c_int = 5;
pub const SEGID_REMOTING: c_int = 6;
pub const SEGID_ENCODER: c_int = 7;
pub const SEGID_TERMINAL: c_int = 8;
pub const SEGID_SENSOR: c_int = 9;
pub const SEGID_INPUTDEVICE: c_int = 10;
pub const SEGID_GAME: c_int = 11;
pub const SEGID_APPLICATION: c_int = 12;
pub const SEGID_BROWSER: c_int = 13;
pub const SEGID_VM: c_int = 14;
pub const SEGID_HMD_SBS: c_int = 15;
pub const SEGID_HMD_L: c_int = 16;
pub const SEGID_HMD_R: c_int = 17;
pub const SEGID_POPUP: c_int = 18;
pub const SEGID_ICON: c_int = 19;
pub const SEGID_TITLEBAR: c_int = 20;
pub const SEGID_CURSOR: c_int = 21;
pub const SEGID_CLIPBOARD: c_int = 22;
pub const SEGID_CLIPBOARD_PASTE: c_int = 23;
pub const SEGID_DEBUG: c_int = 255;
